[AGAA] 08_06: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/08_06.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/08_06.html
@@ -51,6 +51,139 @@ f(x) = f(x + np)
 <p>
 for every real number \(x\) in the domain of \(f\), every integer \(n\) and some positive real number \(p\). The least possible value of \(p\) is the <span id="Graphs of the Sine and Cosine Functions-Periodic Function-period"></span><strong id="period">period</strong> of the function.
 </p>
+
+<div id="Graphs of the Sine and Cosine Functions-Periodic Function-Graph of the Sine Function"><h3 id="Graph of the Sine Function" class="header"><a href="#Graphs of the Sine and Cosine Functions-Periodic Function-Graph of the Sine Function">Graph of the Sine Function</a></h3></div>
+
+<p>
+See FIGURE 85, and trace along the circle to verify the results shown in the table.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/sine_function_circle.png" alt="Sine Function" style="height:200px">
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/sine_function_table.png" alt="Sine Function" style="height:200px">
+</p>
+
+<p>
+This graph is called a <span id="Graphs of the Sine and Cosine Functions-Periodic Function-Graph of the Sine Function-sine wave"></span><strong id="sine wave">sine wave</strong> or <span id="Graphs of the Sine and Cosine Functions-Periodic Function-Graph of the Sine Function-sinusoid"></span><strong id="sinusoid">sinusoid</strong>.
+</p>
+
+<div id="Graphs of the Sine and Cosine Functions-Amplitude"><h2 id="Amplitude" class="header"><a href="#Graphs of the Sine and Cosine Functions-Amplitude">Amplitude</a></h2></div>
+
+<p>
+The graph of \(y = a \sin x\) or \(y = a \cos x\), with \(a \neq 0\), will have the same shape as the graph of \(y = sin x\) or \(y = cos x\), respectively, except with range \([-|a|, |a|]\). The amplitude is \(|a|\).
+</p>
+
+<p>
+No matter what the value of the amplitude, the periods of \(y = a \sin x\) and \(y = a \cos x\) are still \(2\pi\).
+</p>
+
+<div id="Graphs of the Sine and Cosine Functions-Period"><h2 id="Period" class="header"><a href="#Graphs of the Sine and Cosine Functions-Period">Period</a></h2></div>
+
+<p>
+In general, the graph of a function of the form \(y = sin bx\) or \(y = cos bx\), for \(b &gt; 0\), will have a period different from \(2\pi\) when \(b \neq 1\).
+</p>
+
+<p>
+We know that \(bx\) ranges from \(0\) to \(2\pi\), therefore:
+</p>
+
+\begin{align}
+0 \leq bx \leq 2\pi
+\end{align}
+
+\begin{align}
+0 \leq x \leq \frac{2\pi}{b} 
+\end{align}
+
+<p>
+Therefore the period is \(\frac{2\pi}{b}\). By dividing the interval \([0, \frac{2\pi}{b}]\) into four equal parts, we obtain the values for which \(\sin bx\) or \(\cos bx\) is \(-1\), \(0\), or \(1\).
+</p>
+
+<div id="Graphs of the Sine and Cosine Functions-Guidelines for Sketching Graphs of the Sine and Cosine Functions"><h2 id="Guidelines for Sketching Graphs of the Sine and Cosine Functions" class="header"><a href="#Graphs of the Sine and Cosine Functions-Guidelines for Sketching Graphs of the Sine and Cosine Functions">Guidelines for Sketching Graphs of the Sine and Cosine Functions</a></h2></div>
+
+<p>
+To graph \(y = a \sin bx\) or \(y = a \cos bx\), with \(b &gt; 0\), follow these steps.
+</p>
+
+<ol>
+<li>
+Find the period, \(\frac{2\pi}{b}\).
+
+</li><li>
+Divide the interval into four equal parts.
+
+</li><li>
+Evaluate the function for each of the five x-values. The points will be maximum points, minimum points, and x-intercepts.
+
+</li><li>
+Plot the points found in Step 3, and join them with a sinusoidal curve having amplitude \(|a|\).
+
+</li></ol>
+<div id="Graphs of the Sine and Cosine Functions-Translations and Transformations"><h2 id="Translations and Transformations" class="header"><a href="#Graphs of the Sine and Cosine Functions-Translations and Transformations">Translations and Transformations</a></h2></div>
+
+<p>
+In general, the graph of a function of the form:
+</p>
+
+\begin{align}
+y = f(x - d)
+\end{align}
+
+<p>
+is translated horizontally compared with the graph of \(y = f(x)\). The translation is \(d\) units to the right if \(d &gt; 0\) and \(|d|\) units to the left if \(d &lt; 0\).
+</p>
+
+<p>
+In general, the graph of a function of the form:
+</p>
+
+\begin{align}
+y = c + f(x)
+\end{align}
+
+<p>
+is translated vertically compared with the graph of \(y = f(x)\). The translation is \(c\) units up if \(c &gt; 0\) and \(|c|\) units down if \(c &lt; 0\).
+</p>
+
+<div id="Graphs of the Sine and Cosine Functions-Further Guidelines for Sketching Graphs of the Sine and Cosine Functions"><h2 id="Further Guidelines for Sketching Graphs of the Sine and Cosine Functions" class="header"><a href="#Graphs of the Sine and Cosine Functions-Further Guidelines for Sketching Graphs of the Sine and Cosine Functions">Further Guidelines for Sketching Graphs of the Sine and Cosine Functions</a></h2></div>
+
+<p>
+A function of the form \(y = c + a \sin [b(x − d)]\) or \(y = c + a \cos [b(x − d)]\) , \(b &gt; 0\) can be graphed according to the following guidelines:
+</p>
+
+<ul>
+<li>
+Method 1:
+
+<ol>
+<li>
+Find an interval whose length is one period 2bp by solving the three-part inequality \(0 \leq b(x - d) \leq 2\pi\).
+
+</li><li>
+Divide the interval into four equal parts.
+
+</li><li>
+Evaluate the function for each of the five x-values. The points will be maximum points, minimum points, and points that intersect the line \(y = c\).
+
+</li><li>
+Plot the points in Step 3, and join them with a sinusoidal curve having amplitude \(|a|\).
+
+</li></ol>
+</li><li>
+Method 2:
+
+<ol>
+<li>
+Graph \(y = a \sin bx\) or \(y = a \cos bx\). The amplitude of the function is \(|a|\), and the period is \(\frac{2\pi}{b}\). 
+
+</li><li>
+Use translations to graph the desired function.
+
+</li></ol>
+</li></ul>
 </div>
   
 
