[AGAA] Fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/08_06.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/08_06.html
@@ -73,7 +73,7 @@ This graph is called a <span id="Graphs of the Sine and Cosine Functions-Periodi
 <div id="Graphs of the Sine and Cosine Functions-Amplitude"><h2 id="Amplitude" class="header"><a href="#Graphs of the Sine and Cosine Functions-Amplitude">Amplitude</a></h2></div>
 
 <p>
-The graph of \(y = a \sin x\) or \(y = a \cos x\), with \(a \neq 0\), will have the same shape as the graph of \(y = sin x\) or \(y = cos x\), respectively, except with range \([-|a|, |a|]\). The amplitude is \(|a|\).
+The graph of \(y = a \sin x\) or \(y = a \cos x\), with \(a \neq 0\), will have the same shape as the graph of \(y = \sin x\) or \(y = \cos x\), respectively, except with range \([-|a|, |a|]\). The amplitude is \(|a|\).
 </p>
 
 <p>
@@ -83,7 +83,7 @@ No matter what the value of the amplitude, the periods of \(y = a \sin x\) and \
 <div id="Graphs of the Sine and Cosine Functions-Period"><h2 id="Period" class="header"><a href="#Graphs of the Sine and Cosine Functions-Period">Period</a></h2></div>
 
 <p>
-In general, the graph of a function of the form \(y = sin bx\) or \(y = cos bx\), for \(b &gt; 0\), will have a period different from \(2\pi\) when \(b \neq 1\).
+In general, the graph of a function of the form \(y = \sin bx\) or \(y = \cos bx\), for \(b &gt; 0\), will have a period different from \(2\pi\) when \(b \neq 1\).
 </p>
 
 <p>
@@ -160,7 +160,7 @@ Method 1:
 
 <ol>
 <li>
-Find an interval whose length is one period 2bp by solving the three-part inequality \(0 \leq b(x - d) \leq 2\pi\).
+Find an interval whose length is one period \(\frac{2\pi}{b}\) by solving the three-part inequality \(0 \leq b(x - d) \leq 2\pi\).
 
 </li><li>
 Divide the interval into four equal parts.
