--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -69,6 +69,9 @@ Software
 <li>
 <a href="07.html">Virtual Machine I: Processing</a>
 
+</li><li>
+<a href="08.html">Virtual Machine II: Control</a>
+
 </li></ol>
 </li></ol>
 </div>
