[ECS] 10: finish notes [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -72,6 +72,9 @@ Software
 </li><li>
 <a href="08.html">Virtual Machine II: Control</a>
 
+</li><li>
+<a href="10.html">Compiler I: Syntax Analysis</a>
+
 </li></ol>
 </li></ol>
 </div>
