[AGAA] 08_07: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -122,6 +122,9 @@ Trigonometric Functions and Applications.
 </li><li>
 <a href="08_06.html">Graph of the Sine and Cosine Functions</a>
 
+</li><li>
+<a href="08_07.html">Graphs of the Other Circular Functions</a>
+
 </li></ol>
 </li></ol>
 </div>
