[AGAA] 08_07: fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/08_07.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/08_07.html
@@ -109,11 +109,11 @@ The tangent function is undefined for odd multiples of \(\frac{\pi}{2}\) and has
 </p>
 
 <p>
-The tangent function has period \(\pi\). Because \(tan x = \frac{\sin x}{\cos x}\), tangent values are \(0\) when sine values are \(0\) (\(x = 0\)), and undefined when cosine values are \(0\) (\(x = \frac{\pi}{2}\) or \(x = -\frac{\pi}{2}\)). As x-values go from \(-\frac{\pi}{2}\) to \(\frac{\pi}{2}\), tangent values go from \(- \infty\) to \(\infty\).
+The tangent function has period \(\pi\). Because \(\tan x = \frac{\sin x}{\cos x}\), tangent values are \(0\) when sine values are \(0\) (\(x = 0\)), and undefined when cosine values are \(0\) (\(x = \frac{\pi}{2}\) or \(x = -\frac{\pi}{2}\)). As x-values go from \(-\frac{\pi}{2}\) to \(\frac{\pi}{2}\), tangent values go from \(- \infty\) to \(\infty\).
 </p>
 
 <p>
-The graph of \(y = tan x\) is shown in FIGURE 110.
+The graph of \(y = \tan x\) is shown in FIGURE 110.
 </p>
 
 <p>
