[ECS] 12: start notes [skip ci]

--- a/src/Notes/ComputerScience/CA/ECS/index.html
+++ b/src/Notes/ComputerScience/CA/ECS/index.html
@@ -82,6 +82,9 @@ Software
 </li><li>
 <a href="11.html">Compiler II: Code Generation</a>
 
+</li><li>
+<a href="12.html">Operating System</a>
+
 </li></ol>
 </li></ol>
 </div>
