[AGAA] Finish notes for 09_01 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -129,6 +129,17 @@ Trigonometric Functions and Applications.
 </li><li>
 <a href="08_07.html">Graphs of the Other Circular Functions</a>
 
+</li><li>
+<a href="08_08.html">Harmonic Motion</a>
+
+</li></ol>
+</li><li>
+Trigonometric Identities and Equations.
+
+<ol>
+<li>
+<a href="09_01.html">Trigonometric Identities</a>
+
 </li></ol>
 </li></ol>
 </div>
