[AGAA] 09_01: add missing section [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/09_01.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/09_01.html
@@ -76,6 +76,22 @@ The arc terminates at a point \((x, y)\). Angle \(\theta\) determines a correspo
 </p>
 
 \begin{align}
+\sin \theta = \frac{y}{1} = y
+\end{align}
+
+<p>
+and
+</p>
+
+\begin{align}
+\sin(-\theta) = \frac{-y}{1} = -y
+\end{align}
+
+<p>
+Thus:
+</p>
+
+\begin{align}
 \sin(-\theta) = -\sin \theta
 \end{align}
 
