[AGAA] 09_02: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -140,6 +140,9 @@ Trigonometric Identities and Equations.
 <li>
 <a href="09_01.html">Trigonometric Identities</a>
 
+</li><li>
+<a href="09_02.html">Sum and Difference Identities</a>
+
 </li></ol>
 </li></ol>
 </div>
